--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>tyapp</title>
+    <link rel="stylesheet" href="static/swiper.css"/>
   </head>
   <body>
     <div id="app"></div>
