--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <!-- built files will be auto injected -->
 </body>
 <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.11&key=e024942bed9634803a386f2ec0e2f0fe"></script>
+<!--<script src="//unpkg.com/vue-ydui/dist/ydui.flexible.js"></script>-->
 <!--<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=RAKoveCQGYcBaEKFDYuk75OSqoWo1QXd"></script>-->
 <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
 <script>
